# yolov8-genom3

./: Makefile.am  README.adoc  Yolo.idl  Yolov8-genom3-uninstalled.pc.in  Yolov8-genom3.pc.in  configure.ac  yolov8.gen
codels/: Makefile.am  Yolov8_codels.cc  Yolov8_detect_codels.cc  Yolov8_detect_objects_codels.cc  utils.h
codels/detection/: inference.h
examples/: python.py  tcl-script.tcl
